feat: Implement Command Abstraction