@@ -19,11 +19,11 @@ package io.zachbr.debuggery.commands;
 
 import io.zachbr.debuggery.BukkitLogger;
 import io.zachbr.debuggery.DebuggeryBukkit;
-import io.zachbr.debuggery.commands.base.CommandBase;
+import io.zachbr.debuggery.commands.base.BukkitCommandBase;
+import net.kyori.adventure.audience.Audience;
+import net.kyori.adventure.identity.Identity;
 import net.kyori.adventure.text.format.NamedTextColor;
 import org.bukkit.Bukkit;
-import org.bukkit.command.Command;
-import org.bukkit.command.CommandSender;
 import org.bukkit.command.ConsoleCommandSender;
 import org.bukkit.entity.HumanEntity;
 import org.bukkit.entity.Player;
@@ -31,13 +31,12 @@ import org.bukkit.entity.Player;
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import static net.kyori.adventure.text.Component.text;
 
-public class DebugCommand extends CommandBase {
+public class DebugCommand extends BukkitCommandBase {
     private final DebuggeryBukkit plugin;
-    private final Set<CommandSender> debugListeners;
+    private final Set<Audience> debugListeners;
 
     public DebugCommand(DebuggeryBukkit debuggery) {
         super("ddebug", "debuggery.debug", false, false);
@@ -47,7 +46,7 @@ public class DebugCommand extends CommandBase {
     }
 
     @Override
-    protected boolean commandLogic(CommandSender sender, Command command, String label, String[] args) {
+    protected boolean commandLogic(Audience sender, String[] args) {
         // no debug mode, no debug command
         if (!DebuggeryBukkit.isDebugMode()) {
             sender.sendMessage(text("Debuggery Debug Mode is not enabled!", NamedTextColor.RED));
@@ -68,23 +67,16 @@ public class DebugCommand extends CommandBase {
         }
 
         switch (subCommand) {
-            case "subscribe":
-                this.subOrUnsub(sender, subArgs, true);
-                break;
-            case "unsubscribe":
-                this.subOrUnsub(sender, subArgs, false);
-                break;
-            case "info":
-                this.sendSystemInfo(sender);
-                break;
-            default:
-                sender.sendMessage(text("Unknown sub-command", NamedTextColor.RED));
+            case "subscribe" -> this.subOrUnsub(sender, subArgs, true);
+            case "unsubscribe" -> this.subOrUnsub(sender, subArgs, false);
+            case "info" -> this.sendSystemInfo(sender);
+            default -> sender.sendMessage(text("Unknown sub-command", NamedTextColor.RED));
         }
         return true;
     }
 
-    private void subOrUnsub(CommandSender sender, String[] args, boolean add) {
-        CommandSender target = null;
+    private void subOrUnsub(Audience sender, String[] args, boolean add) {
+        Audience target = null;
 
         if (args.length >= 1) {
             Player search = Bukkit.getPlayer(args[0]);
@@ -107,20 +99,21 @@ public class DebugCommand extends CommandBase {
         }
 
         final boolean contains = this.debugListeners.contains(target);
+        final String name = target.get(Identity.NAME).orElse("UNKNOWN");
 
         if (add) {
             if (contains) {
-                sender.sendMessage(text(target.getName() + " is already subscribed to debug messages"));
+                sender.sendMessage(text(name + " is already subscribed to debug messages"));
             } else {
                 this.debugListeners.add(target);
-                sender.sendMessage(text("Subscribed " + target.getName() + " to debug messages"));
+                sender.sendMessage(text("Subscribed " + name + " to debug messages"));
             }
         } else {
             if (contains) {
                 this.debugListeners.remove(target);
-                sender.sendMessage(text("Unsubscribed " + target.getName() + " to debug messages"));
+                sender.sendMessage(text("Unsubscribed " + name + " to debug messages"));
             } else {
-                sender.sendMessage(text(target.getName() + " is not subscribed to debug messages"));
+                sender.sendMessage(text(name + " is not subscribed to debug messages"));
             }
         }
     }
@@ -130,33 +123,31 @@ public class DebugCommand extends CommandBase {
      *
      * @param sender what to send to
      */
-    private void sendSystemInfo(CommandSender sender) {
+    private void sendSystemInfo(Audience sender) {
         for (String line : plugin.getSystemInfo()) {
             sender.sendMessage(text(line, NamedTextColor.GOLD));
         }
     }
 
     @Override
-    protected boolean helpLogic(CommandSender sender, String[] args) {
+    protected boolean helpLogic(Audience sender, String[] args) {
         sender.sendMessage(text("Exposes the internal systems state of the Debuggery plugin"));
         return true;
     }
 
     @Override
-    protected List<String> tabCompleteLogic(CommandSender sender, Command command, String alias, String[] args) {
-        switch (args.length) {
-            case 1:
-                return List.of("subscribe", "unsubscribe", "info");
-            case 2:
-                switch (args[0].toLowerCase()) {
-                    case "subscribe":
-                    case "unsubscribe":
-                        return Bukkit.getOnlinePlayers().stream().map(HumanEntity::getName).collect(Collectors.toList());
-                    default:
-                        return Collections.emptyList();
-                }
-            default:
-                return Collections.emptyList();
-        }
+    protected List<String> tabCompleteLogic(Audience sender, String[] args) {
+        return switch (args.length) {
+            case 1 -> List.of("subscribe", "unsubscribe", "info");
+            case 2 -> switch (args[0].toLowerCase()) {
+                case "subscribe", "unsubscribe" ->
+                        Bukkit.getOnlinePlayers()
+                                .stream()
+                                .map(HumanEntity::getName)
+                                .toList();
+                default -> Collections.emptyList();
+            };
+            default -> Collections.emptyList();
+        };
     }
 }
